<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        style="@style/ZenPetsCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:contentPadding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtModuleName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="5dp"
                    android:paddingEnd="11dp"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:paddingStart="11dp"
                    android:paddingTop="5dp"
                    android:text="@string/module_name"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto_condensed_bold" />

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/imgvwModuleOptions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:adjustViewBounds="true"
                    android:background="#CCDCDCDC"
                    android:padding="6dp"
                    app:iiv_color="@color/secondary_text"
                    app:iiv_icon="faw_ellipsis_v"
                    app:iiv_size="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linlaModuleDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:padding="5dp"
                    app:iiv_color="@android:color/secondary_text_light"
                    app:iiv_icon="faw_calendar_alt"
                    app:iiv_size="15dp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtModuleDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/module_duration_sessions"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto_condensed_regular" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linlaModuleDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:padding="5dp"
                    app:iiv_color="@android:color/secondary_text_light"
                    app:iiv_icon="faw_clipboard2"
                    app:iiv_size="15dp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtModuleDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/module_details"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto_condensed_regular" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linlaModuleFormat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgvwModuleFormat"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:padding="5dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_training_individual_light" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtModuleFormat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/module_format"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto_condensed_regular" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linlaModuleFees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:padding="5dp"
                    app:iiv_color="@android:color/secondary_text_light"
                    app:iiv_icon="faw_rupee_sign"
                    app:iiv_size="15dp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtModuleFees"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/module_fees"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto_condensed_regular" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linlaImagesContainer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="top|center"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="5dp"
                    app:iiv_color="@color/secondary_text"
                    app:iiv_icon="ion_images"
                    app:iiv_size="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/listModuleImages"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:cacheColorHint="@android:color/transparent"
                        android:fadingEdge="none"
                        android:persistentDrawingCache="scrolling"
                        android:scrollbars="none" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txtManageImages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingEnd="11dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="11dp"
                        android:paddingStart="0dp"
                        android:paddingTop="11dp"
                        android:text="MANAGE IMAGES"
                        android:textColor="@color/accent"
                        android:textSize="14sp"
                        app:fontFamily="@font/lato_bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>