<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardEnquiryContainer"
        style="@style/ZenPetsCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:contentPadding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTrainingModule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingEnd="11dp"
                android:paddingLeft="11dp"
                android:paddingRight="11dp"
                android:paddingStart="11dp"
                android:paddingTop="5dp"
                android:text="@string/te_training_module"
                android:textColor="@color/secondary_text"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/balloon_incoming_normal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/imgvwUserDisplayProfile"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:scaleType="centerCrop"
                        app:placeholderImage="@drawable/user_placeholder"
                        app:roundAsCircle="true"
                        app:roundingBorderColor="@color/semiTransparentDark"
                        app:roundingBorderWidth="2dp" />

                    <TextView
                        android:id="@+id/txtUsersMessage"
                        style="@style/NormalRegular"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:paddingEnd="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingStart="8dp"
                        android:paddingTop="5dp"
                        android:text="@string/te_message_incoming"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="end|center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtUserName"
                        style="@style/LightBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingEnd="5dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="5dp"
                        android:paddingStart="0dp"
                        android:text="@string/te_user_name"
                        android:textColor="@android:color/tertiary_text_light"
                        android:textSize="12sp" />

                    <com.mikepenz.iconics.view.IconicsImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginStart="5dp"
                        android:adjustViewBounds="true"
                        app:iiv_color="@color/tertiary_text"
                        app:iiv_icon="oct_primitive_dot"
                        app:iiv_size="2dp" />

                    <TextView
                        android:id="@+id/txtUserTimeStamp"
                        style="@style/LightBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:paddingEnd="5dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="5dp"
                        android:paddingStart="0dp"
                        android:text="@string/te_message_time_stamp"
                        android:textColor="@android:color/tertiary_text_light"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:paddingBottom="5dp"
                    android:paddingEnd="5dp"
                    android:paddingLeft="11dp"
                    android:paddingRight="5dp"
                    android:paddingStart="11dp"
                    android:paddingTop="5dp"
                    app:iiv_color="@color/tertiary_text"
                    app:iiv_icon="faw_comments2"
                    app:iiv_size="16dp" />

                <TextView
                    android:id="@+id/txtMessageCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingEnd="11dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="11dp"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:text="Message Count"

                    android:textColor="@color/secondary_text"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>